docs: api 주석 추가
