# docs/swagger.yaml
@@ -3,12 +3,15 @@ definitions:
   auth.SignInRequest:
     properties:
       auto_login:
+        example: false
         type: boolean
       email:
+        example: lafin716@gmail.com
         maxLength: 255
         minLength: 1
         type: string
       password:
+        example: lafin1234
         type: string
     required:
     - email
@@ -77,6 +80,163 @@ definitions:
     required:
     - timezone_id
     type: object
+  plan.PillToggleRequest:
+    properties:
+      pill_id:
+        type: string
+      userId:
+        type: string
+    required:
+    - pill_id
+    type: object
+  plan.TakeToggleRequest:
+    properties:
+      target_date:
+        type: string
+      timezone_id:
+        type: string
+      userId:
+        type: string
+    required:
+    - target_date
+    - timezone_id
+    type: object
+  plan.UpdateMemoRequest:
+    properties:
+      date:
+        type: string
+      memo:
+        type: string
+      timezone_id:
+        type: string
+      userId:
+        type: string
+    required:
+    - date
+    - memo
+    - timezone_id
+    type: object
+  prescription.AddItemRequest:
+    properties:
+      medicine_id:
+        type: string
+      medicine_name:
+        minLength: 1
+        type: string
+      medicine_unit:
+        type: string
+      memo:
+        type: string
+      take_amount:
+        type: number
+      take_etc:
+        type: string
+      take_moment:
+        type: string
+      take_time_zone:
+        minLength: 1
+        type: string
+      timezone_id:
+        type: string
+    required:
+    - medicine_id
+    - medicine_name
+    - take_time_zone
+    - timezone_id
+    type: object
+  prescription.RegisterItemRequest:
+    properties:
+      medicine_id:
+        type: string
+      medicine_name:
+        type: string
+      medicine_unit:
+        type: string
+      memo:
+        type: string
+      take_amount:
+        type: number
+      take_etc:
+        type: string
+      take_moment:
+        type: string
+      take_time_zone:
+        type: string
+    required:
+    - medicine_id
+    - medicine_name
+    - take_time_zone
+    type: object
+  prescription.RegisterRequest:
+    properties:
+      finished_at:
+        type: string
+      hospital_name:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/prescription.RegisterItemRequest'
+        type: array
+      memo:
+        type: string
+      prescription_name:
+        maxLength: 30
+        type: string
+      started_at:
+        type: string
+      take_days:
+        type: integer
+      user_id:
+        type: string
+    required:
+    - hospital_name
+    - items
+    - started_at
+    - take_days
+    - user_id
+    type: object
+  prescription.UpdateRequest:
+    properties:
+      finished_at:
+        type: string
+      hospital_name:
+        maxLength: 30
+        type: string
+      id:
+        type: string
+      memo:
+        type: string
+      prescription_name:
+        type: string
+      started_at:
+        type: string
+      take_days:
+        type: integer
+    required:
+    - id
+    type: object
+  timezone.CreateTimeZoneRequest:
+    properties:
+      hour:
+        maxLength: 2
+        type: string
+      midday:
+        maxLength: 2
+        type: string
+      minute:
+        maxLength: 2
+        type: string
+      name:
+        type: string
+      use_alert:
+        type: boolean
+    required:
+    - hour
+    - midday
+    - minute
+    - name
+    - use_alert
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -127,20 +287,18 @@ paths:
       - application/json
       responses: {}
       summary: 회원가입
-  /medicine/search:
+  /medicine/search/{pillName}:
     get:
-      consumes:
-      - application/json
       description: 의약품을 검색하는 엔드포인트. 공공 API를 통해 조회하며, 1번 조회 시 DB에 캐싱처리함
       parameters:
       - description: 의약품 이름(like 검색)
-        in: query
-        name: dto
+        in: path
+        name: pillName
         required: true
         type: string
-      produces:
-      - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 의약품 검색
   /plan:
     get:
@@ -148,14 +306,15 @@ paths:
       - application/json
       description: 해당 날짜의 복약계획을 조회하는 엔드포인트, 복용상태 및 복용시간을 같이 응답한다.
       parameters:
-      - description: 조회날짜 (YYYY-MM-DD)
+      - description: 조회날짜 (YYYY-MM-DD), 미입력 시 현재날짜로 세팅
         in: query
-        name: current_date
-        required: true
+        name: date
         type: string
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 날짜별 복약 계획
     post:
       consumes:
@@ -171,6 +330,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 복약 계획 등록
   /plan/:id:
     delete:
@@ -180,7 +341,210 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 복약 계획 삭제
+  /plan/memo:
+    post:
+      description: 날짜별 복용계획 시간대의 메모를 업데이트
+      parameters:
+      - description: 복용계획 메모 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/plan.UpdateMemoRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 메모 업데이트
+  /plan/take:
+    post:
+      description: 복용계획 시간대 전체 복용/미복용처리 (토글로 동작함)
+      parameters:
+      - description: 복용시간대 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/plan.TakeToggleRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 복용처리
+  /plan/take/pill:
+    post:
+      description: 복용계획 시간대내 의약품 복용/미복용처리 (토글로 동작함), 기획 상 전체 복용처리를 한 뒤에 실행 가능
+      parameters:
+      - description: 복용계획 의약품 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/plan.PillToggleRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 개별 의약품 복용처리
+  /prescription:
+    get:
+      description: 해당 날짜의 처방전 목록을 조회하는 엔드포인트
+      parameters:
+      - description: 조회날짜 (YYYY-MM-DD)
+        in: query
+        name: date
+        required: true
+        type: string
+      - description: 조회갯수
+        in: query
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 리스트 조회
+    patch:
+      description: 처방전을 업데이트하는 엔드포인트
+      parameters:
+      - description: 처방전 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/prescription.UpdateRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 업데이트
+    post:
+      description: '[Deprecated:복용계획에서 등록하는 프로세스로 변경됨] 처방전을 등록하는 엔드포인트'
+      parameters:
+      - description: 처방전 등록정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/prescription.RegisterRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 등록
+  /prescription/:id:
+    delete:
+      description: 처방전을 삭제하는 엔드포인트
+      parameters:
+      - description: 처방전 고유번호
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 삭제
+    get:
+      description: 처방전 상세정보를 조회하는 엔드포인트
+      parameters:
+      - description: 처방전 고유번호
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 상세 조회
+  /prescription/items:
+    get:
+      description: 처방전 상세에서 의약품 목록을 조회하는 엔드포인트
+      parameters:
+      - description: 조회날짜 (YYYY-MM-DD)
+        in: query
+        name: date
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 의약품 목록 조회
+    patch:
+      description: 처방전 의약품을 업데이트하는 엔드포인트
+      parameters:
+      - description: 처방전 의약품 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/prescription.UpdateRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 의약품 업데이트
+    post:
+      description: 처방전 의약품을 등록하는 엔드포인트
+      parameters:
+      - description: 처방전 의약품 등록정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/prescription.AddItemRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 의약품 등록
+  /prescription/items/:id:
+    delete:
+      description: 처방전 의약품을 삭제하는 엔드포인트
+      parameters:
+      - description: 처방전 의약품 고유번호
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 의약품 삭제
+    get:
+      description: 처방전 상세정보를 조회하는 엔드포인트
+      parameters:
+      - description: 처방전 의약품 고유번호
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 처방전 의약품 상세 조회
   /takehistory:
     get:
       consumes:
@@ -194,6 +558,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 복용내역 목록
   /takehistory/:id:
     get:
@@ -203,7 +569,62 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 복용내역 상세
+  /timezone:
+    get:
+      description: 복용시간대 목록을 조회하는 엔드포인트
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 복용시간대 목록 조회
+    patch:
+      consumes:
+      - application/json
+      description: 복용시간대 정보를 업데이트하는 엔드포인트
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 복용시간대 업데이트
+    post:
+      consumes:
+      - application/json
+      description: 복용시간대 템플릿을 생성하는 엔드포인트
+      parameters:
+      - description: 복용시간대 정보
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/timezone.CreateTimeZoneRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 복용시간대 추가
+  /timezone/:id:
+    delete:
+      consumes:
+      - application/json
+      description: 복용시간대를 삭제하는 엔드포인트
+      parameters:
+      - description: 복용시간대 고유번호
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 복용시간대 삭제
   /user/leave:
     delete:
       consumes:
@@ -212,6 +633,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 회원탈퇴
   /user/me:
     get:
@@ -221,5 +644,13 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - Bearer: []
       summary: 내 정보 조회
+securityDefinitions:
+  Bearer:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
