# internal/api/timezone.go
@@ -29,6 +29,11 @@ func NewTimeZoneApi(
 	}
 }
 
+// @summary 복용시간대 목록 조회
+// @description 복용시간대 목록을 조회하는 엔드포인트
+// @produce json
+// @router /timezone [get]
+// @Security Bearer
 func (t timezoneApi) GetList(c *fiber.Ctx) error {
 	userId, err := getUserId(t.jwtClient, c)
 	if err != nil {
@@ -43,6 +48,13 @@ func (t timezoneApi) GetList(c *fiber.Ctx) error {
 	return response.New(response.CODE_SUCCESS).SetData(list).Ok(c)
 }
 
+// @summary 복용시간대 추가
+// @description 복용시간대 템플릿을 생성하는 엔드포인트
+// @accept json
+// @produce json
+// @param dto body timezone.CreateTimeZoneRequest true "복용시간대 정보"
+// @router /timezone [post]
+// @Security Bearer
 func (t timezoneApi) Create(c *fiber.Ctx) error {
 	userId, err := getUserId(t.jwtClient, c)
 	if err != nil {
@@ -75,6 +87,12 @@ func (t timezoneApi) Create(c *fiber.Ctx) error {
 		Ok(c)
 }
 
+// @summary 복용시간대 업데이트
+// @description 복용시간대 정보를 업데이트하는 엔드포인트
+// @accept json
+// @produce json
+// @router /timezone [patch]
+// @Security Bearer
 func (t timezoneApi) Update(c *fiber.Ctx) error {
 	userId, err := getUserId(t.jwtClient, c)
 	if err != nil {
@@ -102,6 +120,13 @@ func (t timezoneApi) Update(c *fiber.Ctx) error {
 		Ok(c)
 }
 
+// @summary 복용시간대 삭제
+// @description 복용시간대를 삭제하는 엔드포인트
+// @accept json
+// @produce json
+// @param id path string true "복용시간대 고유번호"
+// @router /timezone/:id [delete]
+// @Security Bearer
 func (t timezoneApi) Delete(c *fiber.Ctx) error {
 	userId, err := getUserId(t.jwtClient, c)
 	if err != nil {
